[gd_scene load_steps=12 format=3 uid="uid://cx8jv5whhbano"]

[ext_resource type="Script" path="res://CountryGuesser.gd" id="1_4rxe4"]
[ext_resource type="Texture2D" uid="uid://b6g0gssme3ggh" path="res://assets/worldmap.png" id="1_dcp13"]
[ext_resource type="Script" path="res://HandArea2D.gd" id="2_2hrg1"]
[ext_resource type="Texture2D" uid="uid://dy0sjgkpbuge5" path="res://assets/finger.png" id="3_61k0i"]
[ext_resource type="Theme" uid="uid://bk4nrdxo8h0g0" path="res://themes/MinimalUI.tres" id="4_fejol"]
[ext_resource type="Script" path="res://SendToLlmButton.gd" id="5_7y257"]
[ext_resource type="Script" path="res://LLMOutputScrollContainer.gd" id="5_f753i"]
[ext_resource type="Script" path="res://AudioInput.gd" id="8_5fgjy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26r1y"]
size = Vector2(973, 780.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvnm1"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_bottom = 2.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_t6b11"]

[node name="CountryGuesser" type="Node2D"]
script = ExtResource("1_4rxe4")

[node name="WorldMap" type="Sprite2D" parent="."]
position = Vector2(577, 331)
scale = Vector2(0.602083, 0.611111)
texture = ExtResource("1_dcp13")

[node name="HandArea2D" type="Area2D" parent="."]
position = Vector2(-43, 959)
scale = Vector2(0.8, 0.8)
script = ExtResource("2_2hrg1")

[node name="HandCollisionShape2D" type="CollisionShape2D" parent="HandArea2D"]
position = Vector2(-112, -279)
shape = SubResource("RectangleShape2D_26r1y")

[node name="Hand" type="Sprite2D" parent="HandArea2D/HandCollisionShape2D"]
position = Vector2(-2.5, -0.5)
texture = ExtResource("3_61k0i")

[node name="SendToLlmButton" type="Button" parent="."]
offset_left = 790.0
offset_top = 588.0
offset_right = 1139.0
offset_bottom = 641.0
theme = ExtResource("4_fejol")
theme_override_constants/outline_size = 0
theme_override_constants/icon_max_width = 30
expand_icon = true
script = ExtResource("5_7y257")

[node name="LlmOutputControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 791.0
offset_top = 30.0
offset_right = 791.0
offset_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LlmOutputScrollContainer" type="ScrollContainer" parent="LlmOutputControl"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_right = 356.0
offset_bottom = 540.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uvnm1")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
script = ExtResource("5_f753i")

[node name="LlmOutputLabel" type="Label" parent="LlmOutputControl/LlmOutputScrollContainer"]
custom_minimum_size = Vector2(340, 525)
layout_mode = 2
size_flags_vertical = 1
text = "hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf hi fd fweaehfg iaewhugaeu hgui ae gdfg fdjg djg jdf "
autowrap_mode = 3

[node name="AudioInput" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_t6b11")
autoplay = true
bus = &"Record"
script = ExtResource("8_5fgjy")

[connection signal="audio_recording_started" from="SendToLlmButton" to="AudioInput" method="start_audio_recording"]
[connection signal="audio_recording_stopped" from="SendToLlmButton" to="AudioInput" method="stop_audio_recording"]
[connection signal="pressed" from="SendToLlmButton" to="SendToLlmButton" method="_on_Button_pressed"]
